# interview_trainer

./: package-lock.json
client/: package-lock.json  package.json
client/src/: App.vue
client/src/components/: AuthPage.vue  FeedbackPage.vue  InterviewPage.vue  MainPage.vue
client/src/router/: index.js
server/: face_processing.py  main.py  pyproject.toml
