[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["senks <yungync@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
opencv-python = "^4.11.0.86"
numpy = "^2.2.4"
fer = "^22.5.1"
moviepy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
